apps/news-app-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: news-app-api
  annotations:
    argocd.argoproj.io/sync-wave: "0"
