apps/news-app-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app-api
  namespace: news-app-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-app-api
  template:
    metadata:
      labels:
        app: news-app-api
    spec:
      containers:
        - name: news-app-api
          image: khumo/news-api:v1.0.4
          ports:
            - containerPort: 80
      resources: {}
