apps/news-app-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-app-api
  namespace: news-app-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: news-app-api
  ports:
    - port: 80
      targetPort: 80
